# vhf-dsc

./: .dockerignore  .gitignore  AGENTS.md  AUDIT_REPORT.md  DEPLOY.md  DOCKER.md  Dockerfile  Dockerfile.server  R-REC-M.493-16-202312-I!!MSW-E.docx  README.md  audit.py  deploy.sh  docker-compose.server.yml  docker-compose.yml  opencode.jsonc  pyproject.toml  run.sh  setup.sh
doc_text/: page_000.txt  page_001.txt  page_002.txt  page_003.txt  page_004.txt  page_005.txt  page_006.txt  page_007.txt  page_008.txt  page_009.txt  page_010.txt  page_011.txt  page_012.txt  page_013.txt  page_014.txt  page_015.txt  page_016.txt  page_017.txt  page_018.txt  page_019.txt  page_020.txt  page_021.txt  page_022.txt  page_023.txt  page_024.txt  page_025.txt  page_026.txt  page_027.txt  page_028.txt  page_029.txt  page_030.txt  page_031.txt  page_032.txt  page_033.txt  page_034.txt  page_035.txt  page_036.txt  page_037.txt  page_038.txt  page_039.txt  (+29 more)
scripts/: check_captures.py  generate_test_samples.py  test_udp_capture.py  udp_capture_monitor.py  udp_relay.py  udp_replay.py  udp_tunnel_capture.py
src/cli/: __init__.py  decode.py  encode.py  monitor.py  monitor_server.py  replay.py  test.py
src/vhf_dsc/: __init__.py
src/vhf_dsc/decoder/: __init__.py  (+7 more)
tests/test_dsp/: test_fsk.py  test_goertzel.py
tests/test_encoder/: test_builder.py
tests/test_io/: test_udp_monitor.py  test_wav.py
tests/test_protocol/: test_characters.py  test_error_correction.py  test_mmsi.py  test_position.py
web/: app.py
web/routes/: __init__.py  decode.py  encode.py  status.py  stream.py
(+26 files in other folders)
