[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vhf-dsc"
version = "0.1.0"
description = "ITU-R M.493-16 compliant VHF DSC encoder and decoder"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "James"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "click>=8.1",
    "soundfile>=0.12",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.1",
]

[project.scripts]
dsc = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vhf_dsc*", "cli*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
